Upgrades to listOrdersQuery
